--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
+    "@nuxtjs/stylelint-module": "^4.1.0",
     "core-js": "^3.19.3",
     "eslint-plugin-vue-scoped-css": "^2.1.0",
     "nuxt": "^2.15.8",
