--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .ts,.js,.vue ."
+    "lint": "eslint --ext .ts,.js,.vue .",
+    "storybook": "nuxt storybook"
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
@@ -28,6 +29,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -40,6 +42,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "stylelint": "^14.2.0",
     "stylelint-config-recommended-scss": "^5.0.2",
-    "stylelint-config-standard": "^24.0.0"
+    "stylelint-config-standard": "^24.0.0",
+    "ts-node": "^10.8.1"
   }
 }
