--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "css-loader": "5.2.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -40,6 +41,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "postcss": "8",
     "stylelint": "^14.2.0",
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-config-standard": "^24.0.0",
