--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/content": "^1",
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/stylelint-module": "^4.1.0",
+    "autoprefixer": "^10.4.8",
     "core-js": "^3.19.3",
     "eslint-plugin-vue-scoped-css": "^2.1.0",
     "nuxt": "^2.15.8",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
@@ -42,10 +44,11 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "postcss": "8",
+    "postcss": "^8.4.16",
     "stylelint": "^14.2.0",
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-config-standard": "^24.0.0",
+    "tailwindcss": "^3.1.8",
     "ts-node": "^10.8.1"
   }
 }
