--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/style-resources": "^1.2.1",
