--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_UNYOOON_WEB }}'
           channelId: live
           projectId: unyooon-web
+        env:
+          GOOGLE_ANALYTICS_ID: '${{ secrets.GOOGLE_ANALYTICS_ID }}'
