--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@nuxt/content": "^1",
     "@nuxtjs/dayjs": "^1.4.1",
+    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "autoprefixer": "^10.4.8",
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.2",
     "eslint-plugin-vue-scoped-css": "^2.1.0",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.28.1",
@@ -34,7 +36,6 @@
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "babel-eslint": "^10.1.0",
