--- a/package.json
+++ b/package.json
@@ -3,56 +3,57 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider && nuxt",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider && nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "NODE_OPTIONS=--openssl-legacy-provider && nuxt generate",
     "lint": "eslint --ext .ts,.js,.vue .",
     "storybook": "nuxt storybook"
   },
   "dependencies": {
-    "@nuxt/content": "^1",
+    "@nuxt/content": "^1.15.1",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/i18n": "^7.3.1",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "autoprefixer": "^10.4.8",
-    "core-js": "^3.19.3",
-    "dotenv": "^16.0.2",
-    "eslint-plugin-vue-scoped-css": "^2.1.0",
+    "core-js": "^3.27.1",
+    "dotenv": "^16.0.3",
+    "eslint-plugin-vue-scoped-css": "^2.2.0",
+    "form-data": "^4.0.0",
     "nuxt": "^2.15.8",
-    "nuxt-i18n": "^6.28.1",
-    "sass": "^1.48.0",
-    "sass-loader": "10",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "^1.57.1",
+    "sass-loader": "10.4.1",
+    "vue": "^2.7.14",
+    "vue-server-renderer": "^2.7.14",
+    "vue-template-compiler": "^2.7.14"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.3",
+    "@babel/eslint-parser": "^7.19.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/storybook": "^4.3.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "css-loader": "5.2.0",
-    "eslint": "^8.4.1",
+    "css-loader": "5.2.7",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-babel-module": "^5.3.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "postcss": "^8.4.16",
-    "stylelint": "^14.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "postcss": "^8.4.21",
+    "stylelint": "^14.16.1",
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-config-standard": "^24.0.0",
-    "tailwindcss": "^3.1.8",
-    "ts-node": "^10.8.1"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   }
 }
