--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
     "sass-loader": "10.4.1",
     "vue": "^2.7.14",
     "vue-server-renderer": "^2.7.14",
-    "vue-template-compiler": "^2.7.14"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
+    "vue-template-compiler": "^2.7.14",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@nuxtjs/fontawesome": "^1.1.2"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
-    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/style-resources": "^1.2.1",
     "babel-eslint": "^10.1.0",
