--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "storybook": "nuxt storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dayjs": "^1.4.1",
@@ -28,11 +33,7 @@
     "sass-loader": "10.4.1",
     "vue": "^2.7.14",
     "vue-server-renderer": "^2.7.14",
-    "vue-template-compiler": "^2.7.14",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@nuxtjs/fontawesome": "^1.1.2"
+    "vue-template-compiler": "^2.7.14"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
