:bookmark: Nuxt3化した

--- a/package.json
+++ b/package.json
@@ -1,64 +1,29 @@
 {
-  "name": "MyBlogSite",
-  "version": "1.0.0",
+  "name": "nuxt-app",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider && nuxt",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider && nuxt build",
-    "start": "nuxt start",
-    "generate": "NODE_OPTIONS=--openssl-legacy-provider && nuxt generate",
-    "lint": "eslint --ext .ts,.js,.vue .",
-    "storybook": "nuxt storybook"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/vue-fontawesome": "^2.0.10",
-    "@nuxt/content": "^1.15.1",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/dayjs": "^1.4.1",
-    "@nuxtjs/google-gtag": "^1.0.4",
-    "@nuxtjs/i18n": "^7.3.1",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/stylelint-module": "^4.1.0",
-    "autoprefixer": "^10.4.8",
-    "core-js": "^3.27.1",
-    "dotenv": "^16.0.3",
-    "eslint-plugin-vue-scoped-css": "^2.2.0",
-    "form-data": "^4.0.0",
-    "nuxt": "^2.15.8",
-    "sass": "^1.57.1",
-    "sass-loader": "10.4.1",
-    "vue": "^2.7.14",
-    "vue-server-renderer": "^2.7.14",
-    "vue-template-compiler": "^2.7.14"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@nuxt/postcss8": "^1.1.3",
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^8.0.0",
-    "@nuxtjs/eslint-module": "^3.1.0",
-    "@nuxtjs/google-analytics": "^2.4.0",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "css-loader": "5.2.7",
-    "eslint": "^8.31.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-babel-module": "^5.3.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-nuxt": "^3.2.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "postcss": "^8.4.21",
-    "stylelint": "^14.16.1",
-    "stylelint-config-recommended-scss": "^5.0.2",
-    "stylelint-config-standard": "^24.0.0",
-    "tailwindcss": "^3.2.4",
-    "ts-node": "^10.9.1"
+    "@nuxt/content": "^2.7.2",
+    "@nuxt/devtools": "latest",
+    "@types/node": "^18.17.3",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.46.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "nuxt": "^3.6.5",
+    "prettier": "^3.0.1",
+    "sass": "^1.65.1"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.9"
   }
 }
