--- a/package.json
+++ b/package.json
@@ -7,23 +7,34 @@
     "dev": "nuxt dev",
     "generate": "nuxi generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "devDependencies": {
     "@nuxt/content": "^2.7.2",
     "@nuxt/devtools": "latest",
+    "@testing-library/vue": "^8.1.0",
     "@types/node": "^18.17.3",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^8.46.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
+    "flush-promises": "^1.0.2",
+    "happy-dom": "^15.7.4",
     "nuxt": "^3.6.5",
     "prettier": "^3.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.65.1",
-    "sitemap": "^7.1.1"
+    "sitemap": "^7.1.1",
+    "unplugin-auto-import": "^0.18.3",
+    "vitest": "^2.1.1"
   },
   "dependencies": {
     "dayjs": "^1.11.9",
